# watcmd

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/watcmd/: __init__.py
