[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watcmd"
version = "0.1.4"
authors = [
  { name="Alex Ramalho", email="alexandre.ramalho.1998@gmail.com" },
]
description = "A CLI tool to get UNIX commands from text explanations using AI"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai",
]

[project.urls]
"Github" = "https://github.com/alramalho/watcmd"

[project.scripts]
watcmd = "watcmd:main"

[tool.hatch.build.targets.wheel]
packages = ["src/watcmd"]
